Updated JWT